Fix non-hidden scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -30,6 +30,10 @@ body {
   max-width: 100vw;
 }
 
+[display="none"] {
+  display: none;
+}
+
 pre,
 code {
   overflow: auto;
